[package]
name = "no_error"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "an error library for no_std"
repository = "https://github.com/richardanaya/no_error/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no_error_macro = {path="../no_error_macro", version="0.0"}
proc-macro-hack = "0.5"